name:          GossipKATS
synopsis:      Simple implementation of NetKAT for Dynamic Gossip
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.8
category:      Logic

library
  ghc-options:      -Wall
  build-depends:    base >= 4.8 && < 5
                  , random
                  , graphviz
                  , QuickCheck
  exposed-modules:  NetKAT
                  , GossipNetKAT
                  , GossipExplicit
                  , Datatypes
                  , Visual
                  , Examples
                  , Helperfunctions
                  , Random

Test-Suite main
  ghc-options:    -Wall
  hs-source-dirs: test
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
  build-depends:  GossipKATS
                , base >= 4.8 && < 5
                , QuickCheck
                , hspec

source-repository head
  type:             git
  location:         https://github.com/janawagemaker/GossipKATS.git
